[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"


[[example]]
name = "covid"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
polars = "0.30.0"
reqwest = "0.11.18"
sqlparser = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17" # 日志处理
tokio = { version = "1", features = ["full"]} # 在 example 下我们需要更多的 tokio feature
