[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"


[[example]]
name = "covid"

[dependencies]
anyhow = "1"
async-trait = "0.1"
polars = { version = "0.15", features = ["json", "lazy"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sqlparser = "0.10"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2" # 日志处理
tokio = { version = "1", features = ["full"]} # 在 example 下我们需要更多的 tokio feature
