[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "3", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.1"
itertools = "0.11.0"
rayon = "1.7.0"
regex = "1.8.4"
thiserror = "1.0.40"
